--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=pgghar
+server.port=8085
+spring.datasource.url=jdbc:mysql://localhost:3306/pgghar
+spring.datasource.username=root
+spring.datasource.password=root
